Fixed issue with COMPONENT errors